@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Insert title here</title>
+</head>
+<body>
+
+<!-- ###BIRTHDAY_LIST### begin -->
+
+<ul>
+	<!-- ###LOOP:MEMBERS### begin -->
+	<!-- ###LOOP_CONTENT### -->
+	<li>
+		###DATE:###MEMBER.BIRTHDAY###|d.m.### ###LINK:###MEMBER.NICKNAME###|###TS:plugin.tx_community.pages.userProfile###|tx_community[user]=###MEMBER.UID######
+	</li>
+	<!-- ###LOOP_CONTENT### -->
+	<!-- ###LOOP:MEMBERS### end -->
+</ul>
+
+<!-- ###BIRTHDAY_LIST### end -->
+
+</body>
+</html>
